src/component/form/IconPicker.module.sass
.icon-picker
  display: flex
  flex-direction: column
  padding: 5px
  box-shadow: 0 0 4px rgb(0 0 0 / 30%)
  border-radius: 10px
  width: 250px
  gap: 10px

  input
    background: var(--surface)
    outline: none
    border: none
    text-align: center
    padding: 5px
    font-size: 1.2rem
    border-radius: 10px

  .icons
    display: flex
    flex-flow: row wrap
    gap: 10px
    margin-bottom: 10px
    justify-content: center

    svg
      cursor: pointer
      height: 24px
      width: 24px

